--- a/Lions.ipynb
+++ b/Lions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 1,
    "id": "a5e77304-194d-458e-b3e6-ab4d23da153e",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2024-05-20T22:41:07.902349Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mReloaded :)                   \u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35m<module>\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
+      "\u001b[2m2024-05-20T22:58:42.456771Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mReloaded :)                   \u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35m<module>\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 2,
    "id": "eeb793ad-bdf3-49e1-b4eb-853102acae57",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 3,
    "id": "20563be7-016e-47e5-9b74-73ac0422b76b",
    "metadata": {},
    "outputs": [],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 4,
    "id": "343898da-da87-463f-8b7a-824e572acbaf",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 7,
    "id": "16e15e2c-66ff-4f15-985b-99fbc0f2d749",
    "metadata": {},
    "outputs": [],
@@ -234,14 +234,14 @@
     "        mail.mark_read(email_data['id'])\n",
     "        return\n",
     "    chat = GoogleAI()\n",
-    "    persona, resp = chat.message(email_data)\n",
+    "    persona, resp = chat.message(email_data['attachments'])\n",
     "    mail.forward_email(email_data['id'], f\"{resp}\\n\\nFrom: {persona} (gemini-1.5-flash)\")\n",
     "    mail.mark_read(email_data['id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 8,
    "id": "2ec58c75-7429-4790-96a6-498fb4a72d19",
    "metadata": {},
    "outputs": [
@@ -249,36 +249,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2024-05-20T22:48:34.123161Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of wistful Jerry Seinfeld standup\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/amd0k71q9lj8\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/fwkd6agx2szi\n",
-      "\u001b[2m2024-05-20T22:48:56.505154Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of livid Donald Trump campaign rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/s2h3ohddxqzm\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/9kji96yp5zmv\n",
-      "\u001b[2m2024-05-20T22:49:18.449999Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of overjoyed Neil deGrasse Tyson lecture\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/fvylbqp413un\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/uqw4yg7wkj6m\n",
-      "\u001b[2m2024-05-20T22:49:39.200967Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of sarcastic Yoda\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/cy5dwu4riueb\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/srtd8ip3k2sc\n",
-      "\u001b[2m2024-05-20T22:49:55.156149Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of melancholic Elon Musk Tweet\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/r4pi6kwl6kua\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/koly55h34ksa\n",
-      "\u001b[2m2024-05-20T22:50:08.791245Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of pensive Winston Churchill wartime address\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/n022hsmvvmzy\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/s2f5f3jjh9ff\n",
-      "\u001b[2m2024-05-20T22:50:28.162186Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of elated Larry David rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/nho91ttcwycv\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/kkglbk5w92h8\n",
-      "\u001b[2m2024-05-20T22:50:43.751878Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of enthralled Elon Musk Tweet\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/fbgyaq2zbbxf\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/iwr6xouqzke3\n",
-      "\u001b[2m2024-05-20T22:50:58.709999Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of despondent Donald Trump campaign rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/pdx3lctcpv13\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/2pq6wufd0ymm\n",
-      "\u001b[2m2024-05-20T22:51:17.446681Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of sarcastic Larry David rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/9orretnjzhln\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/8z9a7vomo8sk\n"
+      "\u001b[2m2024-05-20T22:59:19.692952Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of flabbergasted Joe Rogan podcast\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/he6xszxvnptd\n",
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/j9niaesr3dgu\n",
+      "\u001b[2m2024-05-20T22:59:27.591412Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of pensive Gordon Ramsay critique\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
