--- a/Lions.ipynb
+++ b/Lions.ipynb
@@ -123,12 +123,12 @@
     "        msg['From'] = '700lions@zohomail.com'\n",
     "        msg['Subject'] = f\"[Gemini] {tag} Fwd: {original_msg['Subject']}\"\n",
     "        recipients = [original_msg['From']] + original_msg.get_all('Cc', [])\n",
-    "        if 'worker' not in tag.lower():\n",
+    "        if 'worker' not in tag.lower() and 'boring' not in tag.lower():\n",
     "            recipients += ['jonathanallengrant@gmail.com']\n",
     "    \n",
     "        # Attach the forward text\n",
     "        msg.attach(MIMEText(forward_text, 'plain'))\n",
-    "        \n",
+    "\n",
     "        # Attach any attachments from the original message\n",
     "        for part in original_msg.walk():\n",
     "            if part.get_content_maintype() == 'multipart':\n",
@@ -266,7 +266,7 @@
     }
    ],
    "source": [
-    "for m in mail.get(limit=10):\n",
+    "for m in mail.get(limit=1000):\n",
     "    do_email(mail, m)"
    ]
   },
