--- a/Lions.ipynb
+++ b/Lions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "a5e77304-194d-458e-b3e6-ab4d23da153e",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2024-05-20T22:58:42.456771Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mReloaded :)                   \u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35m<module>\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
+      "\u001b[2m2024-05-21T14:00:14.016657Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mReloaded :)                   \u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35m<module>\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "eeb793ad-bdf3-49e1-b4eb-853102acae57",
    "metadata": {},
    "outputs": [],
@@ -68,6 +68,7 @@
     "    def search_emails(self):\n",
     "        # 700lions@gmail.com\n",
     "        resp, data = self._mail.search(None, 'unseen FROM \"700lions@gmail.com\"')\n",
+    "        # resp, data = self._mail.search(None, 'FROM \"700lions@gmail.com\"')\n",
     "        return data[0].split()\n",
     "\n",
     "    @functools.cache\n",
@@ -122,7 +123,7 @@
     "        msg = MIMEMultipart()\n",
     "        msg['From'] = '700lions@zohomail.com'\n",
     "        msg['Subject'] = f\"[Gemini] {tag} Fwd: {original_msg['Subject']}\"\n",
-    "        recipients = [original_msg['From']] + original_msg.get_all('Cc', [])\n",
+    "        recipients = [original_msg['From']] + original_msg.get_all('To', [''])[0].split(',') + original_msg.get_all('Cc', [])\n",
     "        if 'worker' not in tag.lower() and 'boring' not in tag.lower():\n",
     "            recipients += ['jonathanallengrant@gmail.com']\n",
     "    \n",
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "20563be7-016e-47e5-9b74-73ac0422b76b",
    "metadata": {},
    "outputs": [],
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "343898da-da87-463f-8b7a-824e572acbaf",
    "metadata": {},
    "outputs": [],
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "16e15e2c-66ff-4f15-985b-99fbc0f2d749",
    "metadata": {},
    "outputs": [],
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "2ec58c75-7429-4790-96a6-498fb4a72d19",
    "metadata": {},
    "outputs": [
@@ -249,19 +250,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2024-05-20T22:59:19.692952Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of flabbergasted Joe Rogan podcast\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/he6xszxvnptd\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/j9niaesr3dgu\n",
-      "\u001b[2m2024-05-20T22:59:27.591412Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of pensive Gordon Ramsay critique\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KeyboardInterrupt\n",
-      "\n"
+      "\u001b[2m2024-05-21T14:02:58.092243Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of elated Yoda\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/ejc3hpff6t2\n",
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/qhk91qa3f7dy\n",
+      "\u001b[2m2024-05-21T14:03:14.561158Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of evil Larry David rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/9b8j1eujosq6\n",
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/zjezvvknpm3l\n",
+      "\u001b[2m2024-05-21T14:03:30.116711Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of elated Einstein\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/rgvscq7bjzc1\n",
+      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/rgc69q94rklg\n"
      ]
     }
    ],
@@ -273,23 +270,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "999ce21e-3ef8-4f75-b9c8-64ad510563f0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f7ae514-2b45-40ae-8ae5-3de2674aaa8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b3154be6-cea1-4ed4-a6cd-fb3f1b5b5647",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adec6105-f36a-4965-ac85-b73ea719fbef",
    "metadata": {},
    "outputs": [],
    "source": []
