--- a/Lions.ipynb
+++ b/Lions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "a5e77304-194d-458e-b3e6-ab4d23da153e",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2024-05-21T14:00:14.016657Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mReloaded :)                   \u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35m<module>\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
+      "\u001b[2m2024-06-02T19:40:05.797633Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mReloaded :)                   \u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35m<module>\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
      ]
     }
    ],
@@ -38,6 +38,7 @@
     "import os\n",
     "import google.generativeai as genai\n",
     "import tempfile\n",
+    "import requests\n",
     "\n",
     "import jonlog\n",
     "\n",
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "eeb793ad-bdf3-49e1-b4eb-853102acae57",
    "metadata": {},
    "outputs": [],
@@ -148,7 +149,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 126,
+   "id": "06b1717d-24ab-4c4f-95ff-c56f9ec45ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ZeptoMail:\n",
+    "    def __init__(self, api_key):\n",
+    "        self.api_key = api_key\n",
+    "        self.base_url = 'https://api.zeptomail.com/v1.1'\n",
+    "        self.headers = {\n",
+    "            'Authorization': f'Zoho-enczapikey {self.api_key}',\n",
+    "            'Content-Type': 'application/json'\n",
+    "        }\n",
+    "\n",
+    "    def forward_email(self, omail, msg_id, forward_text):\n",
+    "        original_msg = omail.get_msg(msg_id)\n",
+    "        tag = forward_text.split('] ')[0] + ']'\n",
+    "\n",
+    "        # Create a new MIMEMultipart message for forwarding\n",
+    "        # Create a new MIMEMultipart message for forwarding\n",
+    "        msg = MIMEMultipart()\n",
+    "        msg['From'] = '700lions@zohomail.com'\n",
+    "        msg['Subject'] = f\"[Gemini] {tag} Fwd: {original_msg['Subject']}\"\n",
+    "        recipients = [original_msg['From']] + original_msg.get_all('To', [''])[0].split(',') + original_msg.get_all('Cc', [])\n",
+    "        if 'worker' not in tag.lower() and 'boring' not in tag.lower():\n",
+    "            recipients += ['jonathanallengrant@gmail.com']\n",
+    "\n",
+    "        # Attach any attachments from the original message\n",
+    "        attachments = []\n",
+    "        i = 0\n",
+    "        for part in original_msg.walk():\n",
+    "            if part.get_content_maintype() == 'multipart':\n",
+    "                continue\n",
+    "            if part.get('Content-Disposition') is None:\n",
+    "                continue\n",
+    "            attachment = {\n",
+    "                \"content\": part.get_payload(),\n",
+    "                \"mime_type\": f\"{part.get_content_maintype()}/{part.get_content_subtype()}\",\n",
+    "                \"name\": f\"{i} image\",\n",
+    "            }\n",
+    "            i+=1\n",
+    "            attachments.append(attachment)\n",
+    "\n",
+    "        # Send the forwarded email using ZeptoMail's API\n",
+    "        send_url = f'{self.base_url}/email'\n",
+    "        send_data = {\n",
+    "            \"from\": {\"address\": msg['From'], \"name\": \"700 Lions Gemini\"},\n",
+    "            \"to\": [{\"email_address\": {\"address\": r.split(\">\")[0].split(\"<\")[-1], \"name\": r.split(\">\")[-1] + r.split(\"<\")[0]}} for r in recipients],\n",
+    "            \"subject\": msg['Subject'],\n",
+    "            \"textbody\": forward_text,\n",
+    "            \"attachments\": attachments,\n",
+    "        }\n",
+    "        response = requests.post(send_url, headers=self.headers, json=send_data)\n",
+    "        # logger.info(str(send_data))\n",
+    "        logger.error(response.content)\n",
+    "        response.raise_for_status()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "id": "20563be7-016e-47e5-9b74-73ac0422b76b",
    "metadata": {},
    "outputs": [],
@@ -215,34 +276,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 128,
    "id": "343898da-da87-463f-8b7a-824e572acbaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mail = ZohoMail('700lions@zoho.com', 'tnb2xeh!PXV4vrc.xza')"
+    "mail = ZohoMail('700lions@zoho.com', 'tnb2xeh!PXV4vrc.xza')\n",
+    "# zepto_agent = '17043b9a855b0167'\n",
+    "send_mail = ZeptoMail('wSsVR6108hDwB/opnTGuJb1ryAtRB1z1HEt1jQSn7SD4GK3E9Mcyn0PMUQ+gH/lKGGE8HDVHpLx8nx4D2mUJidwvzQkHWSiF9mqRe1U4J3x17qnvhDzIW29elxqLLYoMzg1tmWVmFc8l+g==')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 129,
    "id": "16e15e2c-66ff-4f15-985b-99fbc0f2d749",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def do_email(mail, email_data):\n",
+    "def do_email(mail, send_mail, email_data):\n",
     "    if len(m.get('attachments', [])) == 0:\n",
     "        mail.mark_read(email_data['id'])\n",
     "        return\n",
     "    chat = GoogleAI()\n",
     "    persona, resp = chat.message(email_data['attachments'])\n",
-    "    mail.forward_email(email_data['id'], f\"{resp}\\n\\nFrom: {persona} (gemini-1.5-flash)\")\n",
+    "    send_mail.forward_email(mail, email_data['id'], f\"{resp}\\n\\nFrom: {persona} (gemini-1.5-flash)\")\n",
     "    mail.mark_read(email_data['id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "id": "2ec58c75-7429-4790-96a6-498fb4a72d19",
    "metadata": {},
    "outputs": [
@@ -250,21 +313,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2m2024-05-21T14:02:58.092243Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of elated Yoda\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/ejc3hpff6t2\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/qhk91qa3f7dy\n",
-      "\u001b[2m2024-05-21T14:03:14.561158Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of evil Larry David rant\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/9b8j1eujosq6\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/zjezvvknpm3l\n",
-      "\u001b[2m2024-05-21T14:03:30.116711Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of elated Einstein\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
-      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/rgvscq7bjzc1\n",
-      "Uploaded file '1.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/rgc69q94rklg\n"
+      "\u001b[2m2024-06-02T21:04:12.116891Z\u001b[0m [\u001b[32m\u001b[1minfo     \u001b[0m] \u001b[1mAt the start of your message, tag the photo with just one of these tags, surrounded by square brackets. [Boring, Animal, Worker, Non-Worker Person, Unknown]. Always respond truthfully. However, respond in the style of pensive Gordon Ramsay critique\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35mmessage\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n",
+      "Uploaded file '0.jpeg' as: https://generativelanguage.googleapis.com/v1beta/files/ticzmykn1p6h\n",
+      "\u001b[2m2024-06-02T21:04:16.120725Z\u001b[0m [\u001b[31m\u001b[1merror    \u001b[0m] \u001b[1mb'{\"error\":{\"code\":\"TM_4001\",\"details\":[{\"code\":\"SM_111\",\"target_value\":\"700lions@zohomail.com\",\"message\":\"Sender address not verified\",\"target\":\"from\"}],\"message\":\"Access Denied\",\"request_id\":\"2d6f.16f4a03148583539.m1.abbbd380-2123-11ef-a0bf-525400fa05f6.18fdac468b8\"}}'\u001b[0m [\u001b[34m\u001b[1m__main__\u001b[0m] \u001b[36mcalling_func\u001b[0m=\u001b[35merror\u001b[0m \u001b[36mthread_id\u001b[0m=\u001b[35m[Main]\u001b[0m\n"
+     ]
+    },
+    {
+     "ename": "HTTPError",
+     "evalue": "401 Client Error:  for url: https://api.zeptomail.com/v1.1/email",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[130], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m m \u001b[38;5;129;01min\u001b[39;00m mail\u001b[38;5;241m.\u001b[39mget(limit\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m):\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mdo_email\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmail\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msend_mail\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[129], line 7\u001b[0m, in \u001b[0;36mdo_email\u001b[0;34m(mail, send_mail, email_data)\u001b[0m\n\u001b[1;32m      5\u001b[0m chat \u001b[38;5;241m=\u001b[39m GoogleAI()\n\u001b[1;32m      6\u001b[0m persona, resp \u001b[38;5;241m=\u001b[39m chat\u001b[38;5;241m.\u001b[39mmessage(email_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mattachments\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m----> 7\u001b[0m \u001b[43msend_mail\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mforward_email\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmail\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43memail_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mresp\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;130;43;01m\\n\u001b[39;49;00m\u001b[38;5;124;43mFrom: \u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mpersona\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m (gemini-1.5-flash)\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m mail\u001b[38;5;241m.\u001b[39mmark_read(email_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[126], line 51\u001b[0m, in \u001b[0;36mZeptoMail.forward_email\u001b[0;34m(self, omail, msg_id, forward_text)\u001b[0m\n\u001b[1;32m     49\u001b[0m \u001b[38;5;66;03m# logger.info(str(send_data))\u001b[39;00m\n\u001b[1;32m     50\u001b[0m logger\u001b[38;5;241m.\u001b[39merror(response\u001b[38;5;241m.\u001b[39mcontent)\n\u001b[0;32m---> 51\u001b[0m \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.pyenv/versions/3.11.4/lib/python3.11/site-packages/requests/models.py:1021\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1016\u001b[0m     http_error_msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m   1017\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstatus_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Server Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreason\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m for url: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1018\u001b[0m     )\n\u001b[1;32m   1020\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1021\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
+      "\u001b[0;31mHTTPError\u001b[0m: 401 Client Error:  for url: https://api.zeptomail.com/v1.1/email"
      ]
     }
    ],
    "source": [
-    "for m in mail.get(limit=1000):\n",
-    "    do_email(mail, m)"
+    "for m in mail.get(limit=10):\n",
+    "    do_email(mail, send_mail, m)"
    ]
   },
   {
@@ -278,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adec6105-f36a-4965-ac85-b73ea719fbef",
+   "id": "462a94d1-a0d9-47ed-84d8-c7b8aa4d6ae0",
    "metadata": {},
    "outputs": [],
    "source": []
