--- a/ChatPodcastGPT.ipynb
+++ b/ChatPodcastGPT.ipynb
@@ -11,6 +11,7 @@
     "import tiktoken\n",
     "import tempfile\n",
     "import IPython\n",
+    "import shutil\n",
     "import enum\n",
     "import jonlog\n",
     "import json\n",
@@ -28,6 +29,16 @@
     "import re\n",
     "import io\n",
     "import retrying\n",
+    "import os\n",
+    "import re\n",
+    "import io\n",
+    "import concurrent.futures\n",
+    "import tempfile\n",
+    "import shutil\n",
+    "import subprocess\n",
+    "import logging\n",
+    "import pydub # Still needed for fallback merge or potential segment validation\n",
+    "import IPython # For display in notebooks\n",
     "import pydub\n",
     "from xml.dom import minidom\n",
     "from xml.etree import ElementTree as ET\n",
@@ -170,6 +181,9 @@
     "        \"sage\",\n",
     "        \"shimmer\",\n",
     "    }\n",
+    "\n",
+    "    MAN = \"onyx\"\n",
+    "    WOMAN = \"coral\"\n",
     "\n",
     "    def __init__(self, voice='alloy', model='gpt-4o-mini-tts', api_key=None):\n",
     "        \"\"\"\n",
